[package]
name = "my-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "client_examples",
    "lib/hello",
    "lib/actix-gcd",
    "lib/mandelbrot",
    "lib/quickreplace",
    "lib/basic-types",
    "lib/error-handling",
    "lib/crate-and-modules",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
hello = {  path = "lib/hello" }
